data-tracing/multi-level-sec/test-single-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-deploy
  namespace: level-c
  labels:
    app: nginx
    purpose: test
spec:
  containers:
  - name: play-pod
    image: nginx:1.15.9
    # imagePullPolicy: Never
    resources: {}
    command: ["/bin/bash", "-c", "while true; do sleep 1000; done"]
    ports:
    - containerPort: 80
  nodeName: s6
